tests/e2e/semantics/object_index_int.error
Error: syntax error in story at line 2, column 5

2|    a = a[0]
          ^

E0104: `Map[string,string]` can't be indexed with `int`
